--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <!-- start of the header -->
     <div class="header">
       <div class="container">
-        <img scr="/resources/images/logo.png";>
+        <img scr="resources/images/logo.png">
         <span>SECRET AGENT SUPPLY INC.</span>
       </div>
     </div>
-      
+
   </body>
 </html>
