if i could spell src

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- start of the header -->
     <div class="header">
       <div class="container">
-        <img scr="resources/images/logo.png">
+        <img src="resources/images/logo.png">
         <span>SECRET AGENT SUPPLY INC.</span>
       </div>
     </div>
