--- a/index.html
+++ b/index.html
@@ -15,5 +15,57 @@
       </div>
     </div>
 
+    <!-- start of the main section -->
+    <div class="main-section">
+      <div class="container">
+        <div class="headline">
+          <h4>NEW ARRIVAL</h4>
+          <h1>SPORT BIKES AND MOTORCYCLES</h1>
+        </div>
+      </div>
+    </div>
+
+    <!-- start of the navigation bar -->
+    <nav>
+      <ul class="container">
+        <li>Eyewear</li>
+        <li>Apparel</li>
+        <li>Gadgets</li>
+        <li>Vehicles</li>
+        <li>Classes</li>
+        <li>Contact</li>
+      </ul>
+
+      <!-- mobile nav container -->>
+
+
+      <!-- Product Info -->
+      <div class="container">
+        <div class="products">
+
+          <div class="product pen">
+            <div class="product-image">
+              <img src="resources/images/pen.png">
+            </div>
+              <span class="description">Exploding Pen</span>
+            </div>
+
+            <div class="product watch">
+              <div class="product-image">
+                <img src="resources/images/watch.png">
+              </div>
+                <span class="description">Cellular Watch</span>
+              </div>
+
+              <div class="product glasses">
+                <div class="product-image">
+                  <img src="resources/images/glasses.png">
+                </div>
+                  <span class="description">Exploding Pen</span>
+                </div>
+              </div>
+            </div>
+
+
   </body>
 </html>
