--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
   <body>
     <!-- start of the header -->
-    <div class="header">
+    <div class="company">
       <div class="container">
-        <img src="resources/images/logo.png">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/logo.png">
         <span>SECRET AGENT SUPPLY INC.</span>
       </div>
     </div>
