--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
-    <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
+    <!-- link href="resources/css/reset.css" type="text/css" rel="stylesheet"-->
     <title>Secret Agent Supply Inc.</title>
   </head>
 
