reset css comes first

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- reset.css must come first -->
+    <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
-    <!-- put the link to reset here -->
     <title>Secret Agent Supply Inc.</title>
   </head>
 
