--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   </head>
 
   <body>
-
+    <!-- start of the header -->
+      <div class="company">
+        <div class="container">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/logo.png">
+          <span>SECRET AGENT SUPPLY INC.</span>
+        </div>
+      </div>
 
   </body>
 </html>
