--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- reset.css must come first -->
     <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
-    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/dogbone.css" type="text/css" rel="stylesheet">
     <title>Secret Agent Supply Inc.</title>
   </head>
 
