--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="product pen">
           <div class="product-image">
-            <img src="./resources/images/pen.png">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png">
           </div>
             <span class="description">Exploding Pen</span>
           </div>
