--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
 
           <div class="product watch">
             <div class="product-image">
-              <img src="resources/images/watch.png">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/watch.png">
             </div>
               <span class="description">Cellular Watch</span>
             </div>
 
             <div class="product glasses">
               <div class="product-image">
-                <img src="resources/images/glasses.png">
+                <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png">
               </div>
                 <span class="description">Exploding Pen</span>
               </div>
