--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container">
       <div class="products">
 
-        <div class="product pen">
+        <div class="product">
           <div class="product-image">
             <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png">
           </div>
