fix business info

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <!-- Business Info -->
         <div class="container">
           <div class="business-info">
-            <div class="info"
+            <div class="info">
               <span class="title">Location</span>
               <span>-47.346436, 84.32354</span>
             </div>
