--- a/index.html
+++ b/index.html
@@ -36,13 +36,12 @@
       <li>Classes</li>
       <li>Contact</li>
     </ul>
+    
+      <!-- mobile nav container -->>
     <ul class="mobile-nav container">
-      <li>Menu</>
-      </ul>
+      <li>Menu</li>
+    </ul>
   </nav>
-
-    <!-- mobile nav container -->>
-
 
     <!-- Product Info -->
     <div class="container">
