--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <li>Classes</li>
       <li>Contact</li>
     </ul>
-    
-      <!-- mobile nav container -->>
+
+      <!-- mobile nav container -->
     <ul class="mobile-nav container">
       <li>Menu</li>
     </ul>
